kubernetes/pvc-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-using-pvc
  namespace: monitoring
spec:
  containers:
    - name: test-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: test-pvc
