kubernetes/opencost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencost
  namespace: opencost
spec:
  ingressClassName: nginx
  rules:
    - host: opencost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencost
                port:
                  number: 9090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencost-api
  namespace: opencost
spec:
  ingressClassName: nginx
  rules:
    - host: opencost-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencost
                port:
                  number: 9003
